--- a/TheRightBaluchon/TheRightBaluchon/Base.lproj/Main.storyboard
+++ b/TheRightBaluchon/TheRightBaluchon/Base.lproj/Main.storyboard
@@ -1,24 +1,153 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Item 2-->
+        <scene sceneID="qio-X0-axN">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="tWN-xn-4lp" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="01E-7O-iHw">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="3TE-pN-tE6"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="Ham-Wd-Glt"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fMk-7a-z1G" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="88" y="846"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="w05-Rz-tSs">
+            <objects>
+                <viewController id="PZU-PE-vnv" customClass="WeatherController" customModule="TheRightBaluchon" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7yk-Kw-dtC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ville" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c0Y-Gl-ijh">
+                                <rect key="frame" x="191" y="129" width="32" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="29" id="aLs-L4-Hoa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Cih-tP-vUv">
+                                <rect key="frame" x="86" y="228" width="242" height="243"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Température" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eC2-fA-6KL">
+                                <rect key="frame" x="158.5" y="546" width="97" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iqt-Zk-TSN">
+                                <rect key="frame" x="186" y="622" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J6x-Sp-y9z">
+                                <rect key="frame" x="86" y="713" width="242" height="53"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="53" id="5ZI-ja-DlC"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="gray" title="Changer Ville" cornerStyle="capsule">
+                                    <fontDescription key="titleFontDescription" type="italicSystem" pointSize="30"/>
+                                    <color key="baseForegroundColor" systemColor="systemBackgroundColor"/>
+                                    <color key="baseBackgroundColor" systemColor="systemGreenColor"/>
+                                </buttonConfiguration>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BVQ-z1-Mnp">
+                                <rect key="frame" x="20" y="80" width="123" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="39" id="8qm-Au-suc"/>
+                                </constraints>
+                                <buttonConfiguration key="configuration" style="filled">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Button">
+                                            <attributes>
+                                                <font key="NSFont" size="15" name="Helvetica"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                    <attributedString key="attributedSubtitle"/>
+                                </buttonConfiguration>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="mBM-iM-4S1"/>
+                        <color key="backgroundColor" systemColor="systemCyanColor"/>
+                        <constraints>
+                            <constraint firstItem="BVQ-z1-Mnp" firstAttribute="top" secondItem="mBM-iM-4S1" secondAttribute="top" constant="36" id="2fr-md-zfa"/>
+                            <constraint firstItem="mBM-iM-4S1" firstAttribute="trailing" secondItem="BVQ-z1-Mnp" secondAttribute="trailing" constant="271" id="8dx-ZS-VL1"/>
+                            <constraint firstItem="iqt-Zk-TSN" firstAttribute="centerX" secondItem="J6x-Sp-y9z" secondAttribute="centerX" id="GwW-j8-muI"/>
+                            <constraint firstItem="Cih-tP-vUv" firstAttribute="trailing" secondItem="J6x-Sp-y9z" secondAttribute="trailing" id="Ibe-dr-wPV"/>
+                            <constraint firstItem="Cih-tP-vUv" firstAttribute="leading" secondItem="mBM-iM-4S1" secondAttribute="leading" constant="86" id="O1o-4e-kBd"/>
+                            <constraint firstItem="Cih-tP-vUv" firstAttribute="leading" secondItem="J6x-Sp-y9z" secondAttribute="leading" id="TO9-Uv-cJs"/>
+                            <constraint firstItem="J6x-Sp-y9z" firstAttribute="top" secondItem="iqt-Zk-TSN" secondAttribute="bottom" constant="70" id="Ysf-0t-rpM"/>
+                            <constraint firstItem="c0Y-Gl-ijh" firstAttribute="centerX" secondItem="Cih-tP-vUv" secondAttribute="centerX" id="ZO5-oi-pOK"/>
+                            <constraint firstItem="iqt-Zk-TSN" firstAttribute="top" secondItem="eC2-fA-6KL" secondAttribute="bottom" constant="55" id="jtv-0S-gAx"/>
+                            <constraint firstItem="c0Y-Gl-ijh" firstAttribute="top" secondItem="mBM-iM-4S1" secondAttribute="top" constant="85" id="l6b-2n-d2F"/>
+                            <constraint firstItem="c0Y-Gl-ijh" firstAttribute="centerX" secondItem="7yk-Kw-dtC" secondAttribute="centerX" id="oNi-SA-3QE"/>
+                            <constraint firstItem="mBM-iM-4S1" firstAttribute="bottom" secondItem="J6x-Sp-y9z" secondAttribute="bottom" constant="47" id="oaX-P1-C5p"/>
+                            <constraint firstItem="BVQ-z1-Mnp" firstAttribute="leading" secondItem="7yk-Kw-dtC" secondAttribute="leadingMargin" id="q9W-7f-EmL"/>
+                            <constraint firstItem="eC2-fA-6KL" firstAttribute="centerX" secondItem="iqt-Zk-TSN" secondAttribute="centerX" id="unZ-zq-Xtr"/>
+                            <constraint firstItem="eC2-fA-6KL" firstAttribute="top" secondItem="Cih-tP-vUv" secondAttribute="bottom" constant="75" id="x0s-UQ-qO4"/>
+                            <constraint firstItem="Cih-tP-vUv" firstAttribute="top" secondItem="c0Y-Gl-ijh" secondAttribute="bottom" constant="70" id="zdE-V8-IQp"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="Kov-Iz-IkT"/>
+                    <connections>
+                        <outlet property="changeCityConfig" destination="J6x-Sp-y9z" id="Rst-3p-tZH"/>
+                        <outlet property="city" destination="c0Y-Gl-ijh" id="m8L-be-KJ4"/>
+                        <outlet property="imageCondition" destination="Cih-tP-vUv" id="C2b-o2-x6o"/>
+                        <outlet property="temperature" destination="eC2-fA-6KL" id="5Er-0X-r7F"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y2R-uy-2jH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1739.1304347826087" y="845.75892857142856"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="940-cB-dtx">
+            <objects>
+                <tabBarController id="srS-6n-9oy" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7Wt-H3-54s">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="PZU-PE-vnv" kind="relationship" relationship="viewControllers" id="2y1-XU-Kgm"/>
+                        <segue destination="tWN-xn-4lp" kind="relationship" relationship="viewControllers" id="9NM-zb-uhl"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iqt-gy-LUx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-903" y="-82"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemCyanColor">
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
